src/ui/components/Comments/Comments.css
.comments {
  position: absolute;
}

.comments-container {
  position: relative;
}

.comment-marker {
  width: 12px;
  height: 12px;
  bottom: 0.5rem;
  background-color: #7ed8c8;
  border-radius: 15px;
  z-index: 100;
  position: absolute;
  border: 1px solid white;
}

.comment-marker:hover {
  transform: scale(1.25);
  animation-duration: 200ms;
  cursor: pointer;
}

.comments .comment {
  position: absolute;
  background: white;
  bottom: 1rem;
  width: 280px;
  border: 1px solid #ccc;
  box-shadow: 0px 3px 4px #eaeaea;
  border-radius: 3px;
  z-index: 101;
}

.comment-body {
  display: flex;
  flex-direction: row;
  padding: 1rem;
}

.comment-avatar {
  background: #7ed8c8;
  width: 44px;
  height: 44px;
  border-radius: 32px;
  margin: 5px;
  margin: 1rem 1rem 0 0;
  border: 5px solid white;
  flex-shrink: 0;
  color: white;
  text-align: center;
  vertical-align: center;
  font-size: 24px;
  font-weight: bold;
  padding-top: 7px;
}

.comment-content {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.comment-header {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  line-height: 2rem;
}

.comment-description {
  font-size: 1.3rem;
  line-height: 2rem;
  color: #737373;
}

.comment textarea {
  width: 100%;
  height: 120px;
  border: 1px solid #e9e9e9;
  padding: 0.5rem;
  font-family: sans-serif;
  font-size: 1.3rem;
  line-height: 1.7rem;
  color: #777;
}

.comment .actions {
  display: flex;
  align-items: center;
}

.comment-jump {
  width: 18px;
  height: 18px;
  transform: scale(0.8);
}

.comment-jump:hover {
  cursor: pointer;
}

.dropdown-panel .menu-item {
  padding: 4px 8px;
  color: var(--theme-body-color);
}

.dropdown-panel .menu-item:hover {
  cursor: pointer;
  background-color: var(--theme-button-background);
}

